[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qilin"
version = "0.1.0"
description = "Data Structures and Algorithms in Python"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Hongnan Gao", email = "hongnangao@gmail.com" }
]
dependencies = [
    "plotly>=5.20.0",
    "rich>=13.7.1",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "numpy>=1.26.0",
]

[tool.ruff]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "PYI"]
ignore = []
line-length = 120
target-version = "py313"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN401"]

[tool.pyright]
include = ["qilin"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingImports = true
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
